--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,8 +1,9 @@
 <% provide(:title, 'About Us') %>
 <h1>About Us</h1>
 <p>
-  The <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  is a project to make a book and screencasts to teach web development
-  with <a href="http://rubyonrails.org/">Ruby on Rails</a>. This
-  is the sample application for the tutorial.
+	It is the lottery except you dont buy tickets, you can earn them.  
+	A "credit" is essentially a lottery ticket
+	You play games to earn credits
+	Your credits belong to you. You can deposit your credits into the "jackpot" where all users deposit their credits. Once the jackpot is full we randomly select a winner. So, essentially a credit is like having a slip of paper with your name on it in a hat and us drawing one user to win the pot. The more credits you have in the pot, the better chance you have to win.
+	The winner is drawn when the pot reaches 100% capacity.
 </p>
