--- a/app/views/jackpots/show.html.erb
+++ b/app/views/jackpots/show.html.erb
@@ -1,9 +1,24 @@
 <p id="notice"><%= notice %></p>
 <h2><%= @jackpot.name %></h2>
-<% if @jackpot.open %>
-	It's not too late! You may still enter this drawing! 
-<% else %>
+<h3><%= @message %></h3>
+<h4>Prize: <%= @jackpot.prize %></h4>
+<h4><%= ((@jackpot.user_entries.size.to_f/@jackpot.max_entries.to_f) * 100).to_i%>% Full.</h4>
+
+<% if @jackpot.open && current_user && signed_in? && current_user.credits > 0 && @jackpot.user_entries.size <  @jackpot.max_entries %>
+	<form id="deposit_form" action="/deposit">
+		It's not too late! You may still enter this drawing! You currently have <%= current_user.credits %> to deposit.
+		<%= number_field_tag 'credits', nil, in: 1...current_user.credits %>
+		<%= hidden_field_tag 'id', @jackpot.id %>
+		<input type="submit" value="Deposit">
+	</form>
+<% elsif current_user && current_user.credits < 1 %>
+	You currently have <%= current_user.credits %>.  This is not enough to enter this pot.
+<% elsif current_user && signed_in? %>
 	We're sorry! We are no longer taking entries into this drawing.
+<% else %>
+	You must sign in to deposit credits!
 <% end %>
-<%= link_to 'Edit', edit_jackpot_path(@jackpot) %> |
-<%= link_to 'Back', jackpots_path %>
+<% if current_user && current_user.admin %>
+	<%= link_to 'Edit', edit_jackpot_path(@jackpot) %> |
+	<%= link_to 'Back', jackpots_path %>
+<% end %>
