--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -12,6 +12,16 @@
 	</div>
 	<button class="play">Click here!</button>
 	<%= javascript_include_tag "game" %>
+<% elsif @game.name == "Memory Game" %>
+    <%= javascript_include_tag "http://code.jquery.com/ui/1.9.2/jquery-ui.min.js"%>
+    <%= javascript_include_tag "tile.js"%>
+    <%= javascript_include_tag "jquery.flip.js"%>
+    <%= javascript_include_tag "matching"%>
+		<div id="game">>
+			<div id="board">
+			</div>
+			<a href='#' id="startGameButton">New Game</a>
+		</div>
 <% elsif @game.name == "Helicopter" %>
 	<div class="ad-space">
 		A partner image will show here sometimes!
