fix for memory game

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -149,8 +149,7 @@ aside {
   background-color: rgb(228, 223, 208);
 }
 
-#startGameButton
-{
+#startGameButton{
   font-family: 'Cherry Swash', cursive;
   font-weight: 400;
   color: rgb(20, 166, 0);
