--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -17,6 +17,9 @@
     <%= javascript_include_tag "tile.js"%>
     <%= javascript_include_tag "jquery.flip.js"%>
     <%= javascript_include_tag "matching"%>
+
+    <span class="scorebox"> <% if @current_high_score %> Your Current Fastest Time Is <span class="highscore"><%= @current_high_score %></span>!<% else %> You have no high score yet!<% end %></span>
+     <br/><span id="time">10:00</span>
 	<div class="outcome">	
 	</div>
 		<div id="game">
