adding persistant high scores to heli-game

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -31,6 +31,7 @@
 	<div class="ad-space">
 		A partner image will show here sometimes!
 	</div>
+    <span class="scorebox"> <% if @current_high_score %> Your Current High score is <span class="highscore"><%= @current_high_score %></span>!<% else %> You have no high score yet!<% end %></span>
 	<div class="outcome">
 		
 	</div>
