--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,27 +1,28 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
+<header class="navbar navbar-inverse">
   <div class="navbar-inner">
-    <div class="container">
+    <div class="container-fluid">
       <%= link_to "@lotto", root_path, id: "logo" %>
       <nav>
         <ul class="nav pull-right">
-          <li><%= link_to "Home", root_path %></li>
-          <li><%= link_to "FAQ", faq_path %></li>
+
           <% if signed_in? %>
-            <li><%= link_to "Users", users_path %></li>
-            <li id="credits" data-user-credits="<%= current_user.credits %>" style="color:#fff">Credits <span id="credit_count">
+            <li>@<%= current_user.name %>:</li>
+            <li id="credits" data-user-credits="<%= current_user.credits %>" style="color:#ff0000">Credits <span id="credit_count">
             <% if current_user.credits %>
             <%= current_user.credits %>
             <% else %>
             0
             <% end %>
             </span></li>
+            <li><%= link_to "Surveys", '#' %></li>
+            <li><%= link_to "Deposit Credits", '#', class: "btn btn-large btn-default" %></li>
             <li id="fat-menu" class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                Account <b class="caret"></b>
-              </a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bars fa-3x"></i></a>
               <ul class="dropdown-menu">
+                <li><%= link_to "FAQ", '#' %></li>
+                <li><%= link_to "How it works", '#' %></li>
                 <li><%= link_to "Profile", current_user %></li>
-                <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+                <li><%= link_to "Edit profile", edit_user_path(current_user) %></li>
                 <li class="divider"></li>
                 <li>
                   <%= link_to "Sign out", signout_path, method: "delete" %>
@@ -29,10 +30,12 @@
               </ul>
             </li>
           <% else %>
-            <li><%= link_to "Sign in", signin_path %></li>
+            <li><%= link_to "How it works", root_path %></li>
+            <li><%= link_to "FAQ", faq_path %></li>
+            <li><%= link_to "Sign in", signin_path, class: "btn btn-large btn-default" %></li>
           <% end %>
         </ul>
       </nav>
-    </div>
+    </div><!-- container -->
   </div>
 </header>
