--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,7 +18,9 @@
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation %>
 
-      <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+      <%= f.submit "Create my account", class: "navbar-links btn btn-outlined btn-theme btn-sm" %>
     <% end %>
   </div>
 </div>
+
+
