--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -18,26 +18,15 @@
 </div>
 <% else %>
 
-  <div class="site-wrapper">
-    <div class="site-wrapper-inner">
-      <div class="cover-container">
-        <div class="masthead clearfix">
+<body class="landing">
+  <div class="container">
+    <div class="row">
+      <div class="sign-up">
 
-        </div>
-
-
-
-      <div class="mastfoot">
-        <div class="inner">
-          <!-- Validation -->
-
-        </div>
       </div>
     </div>
-
-
-</div>
-</div>
+  </div>
+</body>
 
 
 
