--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,8 +21,8 @@
             <li id="fat-menu" class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bars fa-3x"></i></a>
               <ul class="dropdown-menu">
-                <li><%= link_to "FAQ", '#' %></li>
-                <li><%= link_to "How it works", '#' %></li>
+                <li><%= link_to "FAQ", faq_path %></li>
+                <li><%= link_to "How it works", how_it_works_path %></li>
                 <li><%= link_to "Profile", current_user %></li>
                 <li><%= link_to "Edit profile", edit_user_path(current_user) %></li>
                 <li class="divider"></li>
@@ -32,7 +32,7 @@
               </ul>
             </li>
           <% else %>
-            <li class="navbar-links" id="normal-links"><%= link_to "How it works", root_path %></li>
+            <li class="navbar-links" id="normal-links"><%= link_to "How it works", how_it_works_path %></li>
             <li class="navbar-links" id="normal-links"><%= link_to "FAQ", faq_path %></li>
             <li id="navbar-button" class="navbar-links btn btn-outlined btn-theme btn-sm" ><%= link_to "Sign in", signin_path %></li>
           <% end %>
