--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
             </span> credits</li>
             <li class="navbar-links" id="normal-links"><%= link_to "Surveys", '#' %></li>
 
-            <li class="navbar-links btn btn-outlined btn-theme btn-sm" data-wow-delay="0.7s"><%= link_to "Deposit Credits", '#' %></li>
+            <li class="navbar-links btn btn-outlined btn-theme btn-sm" data-wow-delay="0.7s"><%= link_to "Deposit Credits", current_jackpot_path %></li>
 
             <li id="fat-menu" class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bars fa-3x"></i></a>
