adding unstyled signup to homepage

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -22,7 +22,7 @@
   <div class="container">
     <div class="row">
       <div class="sign-up">
-
+        <%= render 'users/form'%>
       </div>
     </div>
   </div>
