--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -161,22 +161,57 @@ aside {
   }
 }
 /* MATCHING GAME */
+
+#game {
+  padding-top: 40px;
+}
+
 #board {
   padding-top: 10px;
     width: 570px;
     height: 450px;
-  background-color: rgb(228, 223, 208);
+  background-color: #000000;
+}
+
+#leaderboard {
+  width: 300px;
+  height: 650px;
+  background-color: #fff;
+}
+
+.scoreList {
+  font-size: 20px;
+  border-bottom: 1px solid #000000;
+  line-height: 40px;
+  margin-right: 25px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.scoreList li {
+
 }
 
 #startGameButton{
-  font-family: 'Cherry Swash', cursive;
-  font-weight: 400;
-  color: rgb(20, 166, 0);
-  padding-bottom: 10px;
-  display: block;
-  &:hover{
-    background:none;
-  }
+  margin-top: 20px;
+}
+
+.back {
+  margin-top: 20px;
+}
+
+#leader {
+  background: #000000;
+  margin-top: 0;
+
+}
+#leader h3 {
+  font-size: 28px;
+  line-height: 40px;
+  margin-top: 0;
+  color: #fff;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .tile {
