--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,8 +23,8 @@
               <ul class="dropdown-menu">
                 <li><%= link_to "FAQ", faq_path %></li>
                 <li><%= link_to "How it works", how_it_works_path %></li>
-                <li><%= link_to "Profile", current_user %></li>
-                <li><%= link_to "Edit profile", edit_user_path(current_user) %></li>
+                <!-- <li><%= link_to "Profile", current_user %></li> -->
+                <li><%= link_to "Edit user info", edit_user_path(current_user) %></li>
                 <li class="divider"></li>
                 <li>
                   <%= link_to "Sign out", signout_path, method: "delete" %>
