--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -160,6 +160,11 @@ aside {
     }
   }
 }
+
+.gameTitle {
+  font-size: 60px;
+  margin-bottom: 30px;
+}
 /* MATCHING GAME */
 
 #game {
@@ -177,6 +182,20 @@ aside {
   width: 300px;
   height: 650px;
   background-color: #fff;
+  opacity: .80;
+}
+
+#topScore {
+  width: 550px;
+  height: 145px;
+  background-color: #fff;
+  opacity: .85;
+  margin-top: 25px;
+  font-size: 32px;
+  line-height: 60px;
+  text-align: left;
+  padding-top: 20px;
+  padding-left: 20px;
 }
 
 .scoreList {
@@ -188,6 +207,8 @@ aside {
   margin-bottom: 10px;
 }
 
+.bestList
+
 .scoreList li {
 
 }
@@ -197,7 +218,7 @@ aside {
 }
 
 .back {
-  margin-top: 20px;
+  margin-top: 40px;
 }
 
 #leader {
