game outcomes look better

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -228,6 +228,24 @@ aside {
   padding-left: 20px;
 }
 
+.instructions {
+  width: 400px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+}
+
+.outcome {
+  width: 400px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+  font-size: 18px;
+  color: red;
+}
+
 .center-button a {
   margin-left: auto;
   margin-right: auto;
