--- a/app/views/jackpots/show.html.erb
+++ b/app/views/jackpots/show.html.erb
@@ -1,27 +1,30 @@
 <div class="instructions">
 	<p id="notice"><%= notice %></p>
 	<!-- <h2><%= @jackpot.name %></h2> -->
-	<h3><%= @message %></h3>
 	<h4 class="prize">Prize: <%= @jackpot.prize %></h4>
+	<h3><%= @message %></h3>
+
+	<h4 class="prize"><%= ((@jackpot.user_entries.size.to_f/@jackpot.max_entries.to_f) * 100).to_i%>% Full</h4>
+
 
 
 	<% if @jackpot.open && current_user && signed_in? && current_user.credits &&current_user.credits  > 0 && @jackpot.user_entries.size <  @jackpot.max_entries %>
+		<p class="depositCredits">You have <font color="red"><%= @jackpot.user_entries.where(user_id: 1).size %></font> credits in this pot.</p>
 		<form id="deposit_form" action="/deposit">
-			 <span class="depositCredits">Available credits to deposit:  <%= current_user.credits %></span>
-			<div class="putEmIn">
-				<div id="depositTheCredits" style="display:inline;float:right;">
-				 <input type="submit" value="Deposit Credits " class="btn btn-outlined btn-theme btn-lg depositCreditsButton">
-				</div>
-				<div id="creditsField" style="display:inline;float:left;">
+			 <span class="depositCredits">Available credits to deposit:  <font color="red"><%= current_user.credits %></font></span>
+
+				<div id="creditsField">
 					<%= number_field_tag 'credits', nil, placeholder: '# of credits to deposit', in: 1..current_user.credits %>
 					<%= hidden_field_tag 'id', @jackpot.id %>
 				</div>
-			</div>
-
+				<div id="depositTheCredits">
+				 <input type="submit" value="Deposit Credits " class="btn btn-outlined btn-theme btn-lg depositCreditsButton">
+				</div>
 		</form>
-		<div class="moneyJar"></div>
-		<h4 class="prize"><%= ((@jackpot.user_entries.size.to_f/@jackpot.max_entries.to_f) * 100).to_i%>% Full.</h4>
-		<p class="depositCredits">You have <%= @jackpot.user_entries.where(user_id: 1).size %> credits in this pot.</p>
+
+		<div class="moneyPot">
+		</div>
+
 	<% elsif current_user && !current_user.credits %>
 		You currently have 0 credits.  Earn more credits by playing games.
 	<% elsif current_user && signed_in? %>
